multiple rovers - collision detection - marsroverAPI adjustments